<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.webforj.samples</groupId>
    <artifactId>ControlSamples</artifactId>
    <version>24.10</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
   </properties>

  <repositories>
    <repository>
      <id>snapshots-repo</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
      <releases><enabled>false</enabled></releases>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
        <id>ossrh-snapshots</id>
        <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        <snapshots>
            <enabled>true</enabled>
        </snapshots>
        <releases>
            <enabled>false</enabled>
        </releases>
    </pluginRepository>
</pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>com.webforj</groupId>
            <artifactId>webforj</artifactId>
            <version>${project.version}</version>
            <type>pom</type>
            <!-- <scope>system</scope>
            <systemPath>C:\DWCJ_Files\engine\dwcj-engine\target\dwcj-engine-24.00-SNAPSHOT.jar</systemPath> -->
        </dependency>
        <dependency>
            <groupId>com.webforj</groupId>
            <artifactId>webforj-code</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.webforj</groupId>
            <artifactId>webforj-googlecharts</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.webforj</groupId>
            <artifactId>webforj-terminal</artifactId>
            <version>24.10</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>controlsamples</finalName>
        <plugins>
            <plugin>
                <groupId>com.webforj</groupId>
                <artifactId>webforj-install-maven-plugin</artifactId>
                <version>24.10-SNAPSHOT</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>install</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <deployurl>http://localhost:55002/webforj-install</deployurl>
                    <publishname>controlsamples</publishname>
                    <debug>true</debug>
                    <useclassfiles>true</useclassfiles>
                    <classfolder>/project/target/classes</classfolder>
                    <watch>true</watch>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
